--- a/src/components/Hero.css
+++ b/src/components/Hero.css
@@ -26,7 +26,7 @@
 .hero-subtitle {
   font-size: 1rem;
   color: #555;
-  margin: 2rem 0;       /* Apenas topo e base */
+  margin: 2rem 0; 
   line-height: 1.5rem;
   padding: 0;
 }
